* Start implementation of "global zoom bands" which can either be referenced from an ANTENNA or a SETUP
* Distinction between recorded and non-recorded channels is now more clear.  Only recorded channels will be correlated.
* No more VexFormat class.  Its contents were moved into VexSetup.
* vex2script: better job allocating RDBE personality and choosing whether or not to record

Version 2.0.1
~~~~~~~~~~~~~
* add -v option to vexpeek
* move most strcpy to snprintf and make use of parameterized string lengths in difxio
* add recordEnable map to VexScan.
* fix back-to-back scan handling when singleScan = False
* fix media changes that occur immediately before a scan change
* don't error-out if an ANTENNA block does not correspond to an entry in antennas list
* Follow refs to CLOCK entries; fall back on unreffed clocks only if no other clocks found first
* Follow refs to TAPELOG_OBS entries; fall back on unreffed VSNs only if no other VSNs found first
* Support proper vex epoch for SITE; allow mjd to continue to work
* Generalize vexDate just a bit to allow for the posibility of vexdate without all date fields
* Add sampling parameter to ANTENNA confuration
* When cross-pol enabled, allow correlation of R-L even if one antenna doesn't have both polarizations
* Try different subintNS until the readsize becomes reasonable (probably some tuning to be done still)
* Propagate .vex file phase cal extraction into .input file
* Pass tcalFreq from .v2d to .input
* Support several different modes of pulse cal tone selection
* Allow different numbers of bits on different antennas within same Mode (Thanks Jasper Horrell for the bug report)
* Catch a few vex problems before segfaulting (thanks Chris Phillips for the bug report)
* Fix bug estimating the output size of the correlation
* Change the nChan input parameter to mean the number of post-averaged channels
  - Clarified in several places in the code whether nChan is nInputChan or nOutputChan
* FIXMEs are now #warnings